# snapdiff

./: .gitignore  example.py  notes.txt  pyproject.toml  requirements.txt  setup.py  snapdiff_config.yaml  snapper.py  snapper_config.yaml  snapper_ids.json  testing.ipynb
data/snapdiff/snapshots/: example_function.pkl
snapdiff/: deepdiff_custom.py  snapper.py  tasks.py  utils.py
